[tool.poetry]
name = "arzeka-payment"
version = "0.0.1"
description = ""
authors = ["Mohamed Zeba <parice02@hotmail.com>"]
readme = "README.md"
packages = [{ include = "arzeka_payment" }]
keywords = ["arzeka", "arzeka payment", "burkina mobile money", "mobile money"]

[tool.poetry.dependencies]
python = "^3.8"
requests ="^2.31.0"
setuptools ="*"


[tool.poetry.urls]
homepage = "https://github.com/parice02/arzeka"
"Bug Tracker" = "https://github.com/parice02/arzeka/issues"
repository = "https://github.com/parice02/arzeka.git"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
