[tool.poetry]
name = "arzeka-payment"
version = "0.0.1"
description = "Library for arzeka payment in Burkina Faso"
authors = ["Mohamed Zeba <parice02@hotmail.com>"]
readme = "README.md"
packages = [{ include = "arzeka" }]
keywords = ["faso arzeka", "faso arzeka payment", "burkina mobile money", "mobile money"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
setuptools = "*"


[tool.poetry.urls]
homepage = "https://github.com/parice02/arzeka"
"Bug Tracker" = "https://github.com/parice02/arzeka/issues"
repository = "https://github.com/parice02/arzeka.git"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
